--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,4 @@ main {
 p {
   padding: 5px 0;
 }
-.error-message {
-  color: red;
-}
 
